Fix Header alignment

--- a/src/components/HeaderWithSearch/HeaderWithSearch.module.css
+++ b/src/components/HeaderWithSearch/HeaderWithSearch.module.css
@@ -1,9 +1,5 @@
 @import '../../colors.css';
 
-.header > * + * {
-  margin: 1em auto;
-}
-
 .searchContainer {
   margin: auto;
   padding: 0 0.5em;
@@ -17,6 +13,7 @@
   max-width: 26em;
   padding: 0 0.5em;
   text-align: center;
+  margin: 1em auto;
 }
 
 .letters a:hover {
